@@ -64,6 +64,8 @@ Improvements:
  - Add :toggle prompt command as a way to manipulate options using keybindings.
    For example: `bind diff D diff-options --patience --notes`. (GH #69)
  - Adjust author width automatically. (GH #49)
+ - Make reference label formatting configurable, for example:
+   `set reference-format = (branch) <tags> remote`. (GH #201)
 
 Bug fixes:
 
